Split to use two different ID for the two different checkbox in two different subview. Currently the code always listen to the checkbox created in the advanced view. so even if user click to check/uncheck the box in the before view, the code listen to the value of the checkbox inside the advanced view which was not shown to the user.

BUG=620921

Review-Url: https://codereview.chromium.org/2074983003
Cr-Commit-Position: refs/heads/master@{#400797}

Former-commit-id: bf4dd975949936a88973a42df91639cec18d0d2e